apps/homeassistant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
  labels:
    pod-security.kubernetes.io/enforce: privileged
